fix z-index

--- a/navigation/navigation.css
+++ b/navigation/navigation.css
@@ -7,6 +7,13 @@ body {
 }
 
 /****** Navigation bar styling *******/
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+}
+
 .navbar {
     font-family: 'IBM Plex Mono', sans-serif;
     background-color: #171819;
